# fangbao

./: .clangd  CMakeLists.txt
.cache/clangd/index/: fonts.c.DAE0854B91154DBB.idx  fonts.h.CF34E09D277E9419.idx  gifdec.c.906038CB949A9E07.idx  gifdec.h.B90E5A3A4EB7331C.idx  lodepng.c.EFAE66BE1A515048.idx  lodepng.h.E78FF12EC67429CD.idx  lv_anim.c.2F55C6D5FB281BF8.idx  lv_anim.h.CB9F7C04AB135E8B.idx  lv_anim_timeline.c.A12F52EEB1B4D734.idx  lv_anim_timeline.h.86B2EEBBF44498D9.idx  lv_animimg.c.7738D351ADF51B20.idx  lv_animimg.h.E682F5F6C9B98275.idx  lv_api_map.h.A02F4CFA359AD098.idx  lv_arc.c.11FCD50881A374F1.idx  lv_arc.h.5BC0ABBD5B6DB0D6.idx  lv_area.c.CF3F43EF45BD0DD7.idx  lv_area.h.D633D20C21E0F90E.idx  lv_assert.h.FD8F60BC63660F02.idx  lv_async.c.C9C54854346A475E.idx  lv_async.h.5F832F0E5647125D.idx  lv_bar.c.C677614E0486D0B7.idx  lv_bar.h.C79E4414DDC8FB44.idx  lv_bidi.c.9B4F0DE711C5592D.idx  lv_bidi.h.9D16D2FD8A5791C5.idx  lv_bmp.c.C029AFB8D8B2967A.idx  lv_bmp.h.E4E9B7EB6DA9D411.idx  lv_btn.c.DFCBD4813FA9977A.idx  lv_btn.h.D296016A4295A897.idx  lv_btnmatrix.c.0D210F070C77DB60.idx  lv_btnmatrix.h.2690BE85F64F2CF7.idx  lv_calendar.c.39110BCD7D59C464.idx  lv_calendar.h.10F7D83003DB5FA3.idx  lv_canvas.c.1953FC9E2559DC74.idx  (+308 more)
components/: CMakeLists.txt
components/BMSData/: bmsdata.h
components/LCD/: lv_port_disp.c  lv_port_disp.h  st7789.c  st7789.h
components/MyBLE/: myble.c  myble.h
components/Touch/: cst816d.c  cst816d.h
lvgl/: CMakeLists.txt  lv_conf.h
lvgl/img/: cycle.c  diff.c  soc.c  temp.c  volt.c
main/: CMakeLists.txt  main.c  ui.c  ui.h
